--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "d3": "^5.7.0",
+    "lodash": "^4.17.10",
     "nuxt": "^1.0.0",
     "vue-material": "latest"
   },
