--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.1",
     "d3": "^5.7.0",
+    "echarts-stat": "^1.1.1",
     "lodash": "^4.17.10",
     "nuxt": "^1.0.0",
+    "vue-echarts": "^3.1.2",
     "vue-material": "latest"
   },
   "devDependencies": {
