--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "echarts-stat": "^1.1.1",
     "lodash": "^4.17.10",
     "nuxt": "^1.0.0",
+    "vue-clipboard2": "^0.2.1",
     "vue-echarts": "^3.1.2",
     "vue-material": "latest"
   },
