--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nuxt": "^1.0.0",
     "vue-clipboard2": "^0.2.1",
     "vue-echarts": "^3.1.2",
-    "vue-material": "latest"
+    "vue-material": "latest",
+    "vue2-leaflet": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
