--- a/package.json
+++ b/package.json
@@ -27,6 +27,16 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "babel-plugin-dynamic-import-node": "^2.1.0",
+    "babel-plugin-inline-import": "^3.0.0",
+    "babel-plugin-transform-es2015-parameters": "^6.24.1",
+    "babel-plugin-transform-imports": "^1.5.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-vue-app": "^2.0.0",
+    "babel-runtime": "^6.26.0",
     "cross-env": "^5.2.0",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
@@ -36,6 +46,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eventsource-polyfill": "^0.9.6",
     "node-sass": "^4.7.2",
     "push-dir": "^0.4.1",
     "sass-loader": "^6.0.6"
