--- a/package.json
+++ b/package.json
@@ -16,26 +16,24 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.1",
+    "@vue/babel-preset-app": "^3.0.4",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-plugin-transform-imports": "^1.5.1",
     "d3": "^5.7.0",
     "echarts-stat": "^1.1.1",
     "lodash": "^4.17.10",
-    "nuxt": "^1.0.0",
+    "nuxt": "2.0.0",
     "vue-clipboard2": "^0.2.1",
     "vue-echarts": "^3.1.2",
-    "vue-material": "latest",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue2-leaflet": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "babel-eslint": "^7.2.3",
-    "babel-plugin-dynamic-import-node": "^2.1.0",
-    "babel-plugin-inline-import": "^3.0.0",
-    "babel-plugin-transform-es2015-parameters": "^6.24.1",
-    "babel-plugin-transform-imports": "^1.5.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
-    "babel-preset-vue-app": "^2.0.0",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.2.0",
     "eslint": "^4.3.0",
