--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-clipboard2": "^0.2.1",
     "vue-echarts": "^3.1.2",
     "vue-material": "^1.0.0-beta-10.2",
+    "vue-multiselect": "^2.1.3",
     "vue2-leaflet": "^1.0.2"
   },
   "devDependencies": {
